--- a/css/style.css
+++ b/css/style.css
@@ -12,16 +12,16 @@ html {font-size: 100%;} /*16px*/
 	--size-1: calc(var(--size0) / var(--ratio));
 }
 
+h1, h2, h3, h4, h5, h6 {
+	font-family: Rubik,system-ui,-apple-system,sans-serif;
+	line-height: 1.3;
+}
+
 body {
 	padding: 0;
 	margin: 0;
-}
 
-h1, h2, h3, h4, h5, h6 {
-	font-family: 'IBM Plex Sans',system-ui,-apple-system,sans-serif;
-}
-body {
-	font-family: Barlow,system-ui,-apple-system,sans-serif;
+	font-family: Rubik,system-ui,-apple-system,sans-serif;
 	line-height: 1.5;
 }
 
@@ -52,27 +52,22 @@ p {
 	max-width: 80ch;
 }
 
-.main-header {
+.cluster {
+	--space-horizontal: 1rem;
+	--space-vertical: 0;
+
 	display: flex;
-	align-items: baseline;
+	flex-wrap: wrap;
+	gap: var(--space-vertical) var(--space-horizontal);
+}
 
-	border-bottom: 2px solid black;
-
-	& .home {
-		font-size: var(--size2);
-		background-color: black;
-		color: white;
-
-		padding: .5em;
-	}
+.main-header {
+	border-bottom: 2px dashed gray;
 
 	& a {
+		padding: .5em;
 		text-decoration: none;
 	}
 
-	& a:not(.home) {
-		padding-left: 1em;
-		padding-right: 1em;
-	}
 }
 
