--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -8,10 +8,14 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
 
-	<link rel="stylesheet" href="/css/style.css">
-	<link rel="stylesheet" href="/css/elements/headings.css">
+	<link rel="stylesheet" href="/css/reset.css">
+	<link rel="stylesheet" href="/css/global.css">
+	<link rel="stylesheet" href="/css/elements.css">
+
 	<link rel="stylesheet" href="/css/utils/cluster.css">
 	<link rel="stylesheet" href="/css/components/main-header.css">
+
+	<link rel="stylesheet" href="/css/style.css">
 
 	<title>{{ title }} - {{ site.name }}</title>
 </head>
