--- a/src/_layouts/header.njk
+++ b/src/_layouts/header.njk
@@ -1,8 +1,8 @@
 <header class="main-header cluster">
-	{% if slug == 'index' %} 
-		<a class="current" href="/">{{ site.name }}</a>
+	{% if slug == 'home' %} 
+		<a class="current" href="/">home</a>
 	{% else %}
-		<a href="/">{{ site.name }}</a>
+		<a href="/">home</a>
 	{% endif %}
 
 	{% for item in site.menu %}
